# webify

./: .gitignore  Cargo.toml  README.md  bench.sh  build.sh  forum.toml
src/: acme.rs  admin.rs  archive.rs  auth_guard.rs  blog.rs  commands.rs  config.rs  constants.rs  dancingcrab.webm  example.md  file_gate.rs  forum.rs  generate.rs  help.rs  interaction.rs  lib.rs  limits.rs  main.rs  media.rs  out.rs  php.rs  prints.rs  repository.rs  routes.rs  slideshow.rs  solarized.todo.css  solarized_dark.rs  stream.rs  thumbnail.rs  todo.rs  upload.rs  utils.rs
src/templates/: config.toml
src/templates/static/: admin_dashboard.html  base.html  blog.html  downloads.html  error.html  file-gate.html  forum.html  forum_admin.html  forum_category.html  forum_edit_post.html  forum_index.html  forum_new_topic.html  home.html  interaction.html  pdf.html  playlists.html  stream.html  stuff.html  thumb.html  topic.html  upload.html  uploads.html  view.html  watch.html
src/templates/static/posts/: Rust.md
src/templates/static/slides/: 0.md  1.md
templates/components/panel/: delete_completed_button.html  toggle_completed_button.html
templates/responses/: index.html
