[package]
name = "webify"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "webify"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-server-dual-protocol = "0.7.0"
bcrypt = "0.17.1"
bytes = "1.10.0"
chrono = { version = "0.4.42", features = ["serde"] }
fastcgi-client = "0.10.0"
futures = "0.3.31"
image = "0.25.6"
lettre = { version = "0.11.19", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
oauth2_login = "0.1.0"
pulldown-cmark = "0.13.0"
rand = "0.9.0"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
solarized = { git = "https://github.com/archification/solarized.git", branch = "main" }
surrealdb = { version = "2.4.0", features = ["kv-rocksdb"] }
tempfile = "3.20.0"
tera = "1.20.1"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
webbrowser = "1.0.6"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
