[package]
name = "webify"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "webify"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.8", features = ["multipart", "ws"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"], default-features = false }
base64 = "0.22.1"
bcrypt = "0.17.1"
bytes = "1.10.0"
chrono = { version = "0.4.42", features = ["serde"] }
fastcgi-client = "0.10.0"
futures = "0.3.31"
image = "0.25.6"
lettre = { version = "0.11.19", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
oauth2_login = "0.1.0"
pulldown-cmark = "0.13.0"
rand = "0.9.0"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
rustls = { version = "0.23.36", features = ["ring"] }
rustls-pemfile = "2"
sanitize-filename = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
solarized = { git = "https://github.com/archification/solarized.git", branch = "main" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
tempfile = "3.20.0"
tera = "1.20.1"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
urlencoding = "2.1.3"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
webbrowser = "1.0.6"
webrtc = "0.11"
console-subscriber = "0.5.0"
instant-acme = { version = "0.8", default-features = false, features = ["ring", "hyper-rustls"] }
x509-parser = "0.18"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
